✨ some meta tags

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,7 +24,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./index.js" defer type="module"></script>
-    <title>Shorten!</title>
+
+    <!-- HTML Meta Tags -->
+    <title>Pops.gq | Free URL Shortening Service</title>
+    <meta
+      name="description"
+      content="A free and easy URL shortening service and API. You can check out the API docs at pops.gq/docs."
+    />
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://pops.gq/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Pops.gq | Free URL Shortening Service" />
+    <meta
+      property="og:description"
+      content="A free and easy URL shortening service and API. You can check out the API docs at pops.gq/docs."
+    />
+    <meta
+      property="og:image"
+      content="https://source.unsplash.com/random/1200x630?computer"
+    />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="pops.gq" />
+    <meta property="twitter:url" content="https://pops.gq/" />
+    <meta
+      name="twitter:title"
+      content="Pops.gq | Free URL Shortening Service"
+    />
+    <meta
+      name="twitter:description"
+      content="A free and easy URL shortening service and API. You can check out the API docs at pops.gq/docs."
+    />
+    <meta
+      name="twitter:image"
+      content="https://source.unsplash.com/random/1200x630?computer"
+    />
+
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
   </head>
   <style>
     body {
