--- a/frontend/index.html
+++ b/frontend/index.html
@@ -58,6 +58,9 @@
       content="https://source.unsplash.com/random/1200x630?computer"
     />
 
+    <!-- Discord Embed Color -->
+    <meta name="theme-color" content="#404099" />
+
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
   </head>
   <style>
