--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,20 +2,6 @@
 <html lang="en">
   <head>
     <link rel="icon" type="image/svg+xml" href="/images/icon.svg" />
-    <!-- Bootstrap Css -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
-      crossorigin="anonymous"
-    />
-    <!-- Bootstrap Script -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
-      crossorigin="anonymous"
-      defer
-    ></script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -65,8 +51,8 @@
   </head>
   <style>
     body {
-      margin: 0;
-      background-color: rgb(64, 63, 153);
+      margin: 0 !important;
+      background-color: rgb(64, 63, 153) !important;
     }
   </style>
   <body>
